2013-04-02  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/fpu/s_rint.S: Remove branch prediction
	instructions.
	* sysdeps/powerpc/powerpc32/fpu/s_rintf.S: Likewise.
	* sysdeps/powerpc/powerpc64/fpu/s_rint.S: Likewise.
	* sysdeps/powerpc/powerpc64/fpu/s_rintf.S: Likewise.
	* benchtests/Makefile: Add rint benchtest.
	* benchtests/rint-inputs: Input for rint benchtest.

2013-03-28  Alan Modra  <amodra@gmail.com>

	* sysdeps/powerpc/powerpc32/start.S (cfi_startproc, cfi_endproc):
	Define as empty.
	* sysdeps/powerpc/powerpc64/start.S (cfi_startproc, cfi_endproc):
	Likewise.

2013-03-25  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/s_llround.c: Fix libm ABI issue with missing
	llroundl symbol when building for PPC32.

2013-03-21  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/w_sqrt.c (compat_symbol): Add sqrtl compat
	symbol.

2013-03-15  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/bits/libc-vdso.h (VDSO_IFUNC_RET): Add
	macro to return vdso values correctly in IFUNC implementations.
	* sysdeps/unix/sysv/linux/powerpc/gettimeofday.c (__gettimeofday):
	Optimization by using IFUNC.

2013-03-08  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/ieee754/ldbl-128ibm/math_ldbl.h (ldbl_pack): Rename to
	default_ldbl_pack and using as default implementation.
	(ldbl_unpack): Rename to default_ldbl_unpack and using as default
	implementation.
	* sysdeps/powerpc/fpu/math_ldbl.h (ldbl_extract_mantissa): Remove
	redundant definition.
	(ldbl_insert_mantissa): Likewise.
	(ldbl_canonicalize): Likewise.
	(ldbl_nearbyint): Likewise.
	(ldbl_pack): Rename to ldbl_pack_ppc.
	(ldbl_unpack): Rename to ldbl_unpack_ppc.
	* sysdeps/unix/sysv/linux/powerpc/Implies: Remove file.
	* sysdeps/powerpc/Implies: Add ieee754/ldbl-opt after ieee754/ldbl-128ibm.

2013-03-08  Siddhesh Poyarekar  <siddhesh@redhat.com>
